--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# OpenWrt version: Attitude Adjustment (r37768)
-# Sun Aug 25 22:24:49 2013
+# OpenWrt version: Attitude Adjustment (r37838)
+# Tue Aug 27 15:32:52 2013
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -396,7 +396,6 @@ CONFIG_DEFAULT_kmod-ipt-nathelper=y
 CONFIG_DEFAULT_kmod-leds-gpio=y
 CONFIG_DEFAULT_kmod-ledtrig-default-on=y
 CONFIG_DEFAULT_kmod-ledtrig-netdev=y
-CONFIG_DEFAULT_kmod-ledtrig-timer=y
 CONFIG_DEFAULT_kmod-ledtrig-usbdev=y
 CONFIG_DEFAULT_kmod-usb-core=y
 CONFIG_DEFAULT_kmod-usb2=y
@@ -540,7 +539,7 @@ CONFIG_GCC_VERSION_4_7_LINARO=y
 # CONFIG_GCC_USE_GRAPHITE is not set
 CONFIG_EXTRA_GCC_CONFIG_OPTIONS="--disable-nls --enable-threads=posix"
 # CONFIG_SSP_SUPPORT is not set
-CONFIG_TLS_SUPPORT=y
+# CONFIG_TLS_SUPPORT is not set
 # CONFIG_SJLJ_EXCEPTIONS is not set
 CONFIG_INSTALL_LIBSTDCPP=y
 # CONFIG_INSTALL_LIBGCJ is not set
@@ -646,7 +645,7 @@ CONFIG_BUSYBOX_CONFIG_FEATURE_HAVE_RPC=y
 # CONFIG_BUSYBOX_CONFIG_PIE is not set
 CONFIG_BUSYBOX_CONFIG_LFS=y
 CONFIG_BUSYBOX_CONFIG_CROSS_COMPILER_PREFIX=""
-CONFIG_BUSYBOX_CONFIG_EXTRA_CFLAGS=""
+CONFIG_BUSYBOX_CONFIG_EXTRA_CFLAGS="-Os -pipe -march=24kc -mno-mips16 -mno-branch-likely -fno-caller-saves -mplt -mgp32 -msym32"
 
 #
 # Debugging Options
@@ -679,7 +678,7 @@ CONFIG_BUSYBOX_CONFIG_FEATURE_FAST_TOP=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_MAX_LEN=512
 # CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_VI is not set
-CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_HISTORY=8
+CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_HISTORY=4
 # CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_SAVEHISTORY is not set
 CONFIG_BUSYBOX_CONFIG_FEATURE_TAB_COMPLETION=y
 # CONFIG_BUSYBOX_CONFIG_FEATURE_USERNAME_COMPLETION is not set
@@ -1882,8 +1881,7 @@ CONFIG_PACKAGE_kmod-switch-rtl8366rb=y
 #
 CONFIG_PACKAGE_kmod-8021q=y
 # CONFIG_PACKAGE_kmod-appletalk is not set
-CONFIG_PACKAGE_kmod-atm=y
-# CONFIG_PACKAGE_kmod-atmtcp is not set
+# CONFIG_PACKAGE_kmod-atm is not set
 # CONFIG_PACKAGE_kmod-ax25 is not set
 # CONFIG_PACKAGE_kmod-batman-adv is not set
 # CONFIG_PACKAGE_kmod-bonding is not set
@@ -1892,7 +1890,6 @@ CONFIG_PACKAGE_kmod-atm=y
 CONFIG_PACKAGE_kmod-gre=y
 CONFIG_PACKAGE_kmod-ip6-tunnel=y
 # CONFIG_PACKAGE_kmod-ipip is not set
-# CONFIG_PACKAGE_kmod-ipoa is not set
 # CONFIG_PACKAGE_kmod-ipsec is not set
 CONFIG_PACKAGE_kmod-iptunnel4=y
 CONFIG_PACKAGE_kmod-iptunnel6=y
