--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # OpenWrt version: Attitude Adjustment (r37838)
-# Tue Aug 27 15:32:52 2013
+# Sat Aug 31 18:03:10 2013
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -1921,7 +1921,7 @@ CONFIG_PACKAGE_kmod-sit=y
 # CONFIG_PACKAGE_kmod-slip is not set
 CONFIG_PACKAGE_kmod-stp=y
 # CONFIG_PACKAGE_kmod-trelay is not set
-# CONFIG_PACKAGE_kmod-tun is not set
+CONFIG_PACKAGE_kmod-tun=m
 # CONFIG_PACKAGE_kmod-wprobe is not set
 
 #
@@ -2364,7 +2364,7 @@ CONFIG_PACKAGE_libbz2=y
 # CONFIG_PACKAGE_libcroco is not set
 # CONFIG_PACKAGE_libcryptoxx is not set
 # CONFIG_PACKAGE_libcunit is not set
-# CONFIG_PACKAGE_libcurl is not set
+CONFIG_PACKAGE_libcurl=m
 # CONFIG_PACKAGE_libcwiid is not set
 # CONFIG_PACKAGE_libdaemon is not set
 # CONFIG_PACKAGE_libdaq is not set
@@ -2380,7 +2380,7 @@ CONFIG_PACKAGE_libbz2=y
 # CONFIG_PACKAGE_libdvdread is not set
 # CONFIG_PACKAGE_libelf is not set
 # CONFIG_PACKAGE_libevent is not set
-# CONFIG_PACKAGE_libevent2 is not set
+CONFIG_PACKAGE_libevent2=m
 # CONFIG_PACKAGE_libevent2-core is not set
 # CONFIG_PACKAGE_libevent2-extra is not set
 # CONFIG_PACKAGE_libevent2-openssl is not set
@@ -2434,7 +2434,7 @@ CONFIG_PACKAGE_libjson-c=y
 # CONFIG_PACKAGE_libleptonica is not set
 # CONFIG_PACKAGE_libltdl is not set
 CONFIG_PACKAGE_liblua=y
-# CONFIG_PACKAGE_liblzo is not set
+CONFIG_PACKAGE_liblzo=m
 # CONFIG_PACKAGE_libmad is not set
 # CONFIG_PACKAGE_libmagic is not set
 # CONFIG_PACKAGE_libmbus is not set
@@ -2442,7 +2442,7 @@ CONFIG_PACKAGE_liblua=y
 # CONFIG_PACKAGE_libmicrohttpd is not set
 # CONFIG_PACKAGE_libmicroxml is not set
 # CONFIG_PACKAGE_libmikmod is not set
-# CONFIG_PACKAGE_libminiupnpc is not set
+CONFIG_PACKAGE_libminiupnpc=m
 # CONFIG_PACKAGE_libmms is not set
 CONFIG_PACKAGE_libmnl=y
 # CONFIG_PACKAGE_libmodbus is not set
@@ -2597,8 +2597,10 @@ CONFIG_PACKAGE_zlib=y
 # CONFIG_PACKAGE_ctorrent is not set
 # CONFIG_PACKAGE_ctorrent-nossl is not set
 # CONFIG_PACKAGE_rtorrent is not set
-# CONFIG_PACKAGE_transmission-daemon is not set
-# CONFIG_PACKAGE_transmission-remote is not set
+CONFIG_PACKAGE_transmission-daemon=m
+# CONFIG_PACKAGE_transmission-cli is not set
+CONFIG_PACKAGE_transmission-remote=m
+CONFIG_PACKAGE_transmission-web=m
 
 #
 # Captive Portals
@@ -2948,12 +2950,31 @@ CONFIG_PACKAGE_relayd=y
 # CONFIG_PACKAGE_openl2tp-mini is not set
 # CONFIG_PACKAGE_opennhrp is not set
 # CONFIG_PACKAGE_openswan is not set
-# CONFIG_PACKAGE_openvpn is not set
+CONFIG_PACKAGE_openvpn=m
+
+#
+# Configuration
+#
+# CONFIG_OPENVPN_DISABLE_LZO is not set
+# CONFIG_OPENVPN_DISABLE_CRYPTO is not set
+# CONFIG_OPENVPN_DISABLE_SSL is not set
+# CONFIG_OPENVPN_X509_ALT_USERNAME is not set
+# CONFIG_OPENVPN_DISABLE_MULTI is not set
+# CONFIG_OPENVPN_DISABLE_SERVER is not set
+CONFIG_OPENVPN_DISABLE_EUREPHIA=y
+CONFIG_OPENVPN_DISABLE_MANAGEMENT=y
+# CONFIG_OPENVPN_DISABLE_PKCS11 is not set
+# CONFIG_OPENVPN_DISABLE_HTTP is not set
+# CONFIG_OPENVPN_DISABLE_FRAGMENT is not set
+# CONFIG_OPENVPN_DISABLE_MULTIHOME is not set
+# CONFIG_OPENVPN_DISABLE_PORT_SHARE is not set
+# CONFIG_OPENVPN_DISABLE_DEF_AUTH is not set
+# CONFIG_OPENVPN_DISABLE_PF is not set
 # CONFIG_PACKAGE_openvpn-devel-nossl is not set
 # CONFIG_PACKAGE_openvpn-devel-openssl is not set
 # CONFIG_PACKAGE_openvpn-devel-polarssl is not set
-# CONFIG_PACKAGE_openvpn-easy-rsa is not set
-# CONFIG_PACKAGE_pptpd is not set
+CONFIG_PACKAGE_openvpn-easy-rsa=m
+CONFIG_PACKAGE_pptpd=m
 # CONFIG_PACKAGE_quicktun is not set
 # CONFIG_PACKAGE_ssltunnel is not set
 # CONFIG_PACKAGE_strongswan is not set
@@ -3779,7 +3800,7 @@ CONFIG_PACKAGE_jshn=y
 # CONFIG_PACKAGE_ocf-crypto-headers is not set
 # CONFIG_PACKAGE_open2300 is not set
 # CONFIG_PACKAGE_openldap-utils is not set
-# CONFIG_PACKAGE_openssl-util is not set
+CONFIG_PACKAGE_openssl-util=m
 # CONFIG_PACKAGE_owipcalc is not set
 # CONFIG_PACKAGE_oww is not set
 # CONFIG_PACKAGE_pciutils is not set
