--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# OpenWrt version: Attitude Adjustment (r38033)
-# Fri Sep 20 18:41:33 2013
+# OpenWrt version: Attitude Adjustment (r38093)
+# Sun Sep 22 14:42:12 2013
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -2538,8 +2538,8 @@ CONFIG_PACKAGE_libuci-lua=y
 # CONFIG_PACKAGE_libucl is not set
 # CONFIG_PACKAGE_libunbound is not set
 # CONFIG_PACKAGE_libupnp is not set
-CONFIG_PACKAGE_libusb=y
-# CONFIG_PACKAGE_libusb-1.0 is not set
+# CONFIG_PACKAGE_libusb is not set
+CONFIG_PACKAGE_libusb-1.0=y
 # CONFIG_PACKAGE_libusbmuxd is not set
 # CONFIG_PACKAGE_libusbpp is not set
 CONFIG_PACKAGE_libuuid=y
