--- a/feeds/packages/libs/libusb-1.0/Makefile
+++ b/feeds/packages/libs/libusb-1.0/Makefile
@@ -39,7 +39,7 @@ define Build/InstallDev
 	$(INSTALL_DIR) $(1)/usr/include/libusb-1.0
 	$(CP) \
 		$(PKG_INSTALL_DIR)/usr/include/libusb-1.0/libusb.h \
-		$(1)/usr/include/libusb-1.0/
+		$(1)/usr/include/
 	$(INSTALL_DIR) $(1)/usr/lib
 	$(CP) $(PKG_INSTALL_DIR)/usr/lib/libusb*.{a,la,so*} $(1)/usr/lib/
 	$(INSTALL_DIR) $(1)/usr/lib/pkgconfig
