--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# OpenWrt version: Attitude Adjustment (r38347)
-# Mon Oct 14 22:19:54 2013
+# OpenWrt version: Attitude Adjustment (r38455)
+# Sat Oct 19 14:53:54 2013
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -381,7 +381,7 @@ CONFIG_TARGET_ar71xx_generic_TLWR1043=y
 CONFIG_HAS_SUBTARGETS=y
 CONFIG_TARGET_BOARD="ar71xx"
 CONFIG_TARGET_ARCH_PACKAGES="ar71xx"
-CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -march=24kc -mno-mips16 -mno-branch-likely -fno-caller-saves -mplt -mgp32 -msym32 -mno-explicit-relocs"
+CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -march=24kc -mno-mips16 -mno-branch-likely -fno-caller-saves -mplt -mgp32 -msym32"
 CONFIG_LINUX_3_3=y
 CONFIG_DEFAULT_base-files=y
 CONFIG_DEFAULT_busybox=y
